Hooray for .vimrc!

--- a/Programming/Physics/SUVAT.html
+++ b/Programming/Physics/SUVAT.html
@@ -22,7 +22,7 @@ function quadratic(a,b,c) {
         } else if(x1<0&&x2>=0){
             return x2;
         };
-    } else if(d=0) {
+    } else f(d=0) {
         var x = (0-b)/(2*a);
         return x;
     } else {
