--- a/Programming/Euler/Projectile Calculator/index.html
+++ b/Programming/Euler/Projectile Calculator/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 	<head>
 	<title>How far will it go?</title>
-	<script src='Script.js'></script>
+	<script>
+    function trajectory(a,b) {
+	var totalDistance = parseFloat((2(a^2)(Math.sin(Math.radians(b)))(Math.cos(Math.radians(b))))/9.81);
+	console.log(totalDistance);
+}
+    </script>
 	</head>
 	<body>
 		<input type='text' id='velocity' value='0'>Initial Velocity</input><br>
 		<input type='text' id='angle' value='0'>Initial Angle</input><br>
-		<button id='Calculate'>Calculate!</button>
+		<button id='Calculate'
+            onclick="trajectory(document.getElementById('velocity'),document.getElementById('angle'))">Calculate!</button>
 	</body>
 </html>
