--- a/Vim/Test.html
+++ b/Vim/Test.html
@@ -13,4 +13,12 @@ document.getElementsByClassName(' ')
 ಥ_ಥ 
 ಥ‿ಥ 
 ಠ‿ಠ
+document.getElementById('')
+document.getElementById('')
+document.getElementById('')
+document.getElementById('')
+document.getElementById( ')
+document.getElementById( ')
 document.getElementById(' ')
+document.getElementById(' ')
+document.getElementById(' ').value
