--- a/Programming/Physics/SUVAT.html
+++ b/Programming/Physics/SUVAT.html
@@ -30,14 +30,23 @@ function quadratic(a,b,c) {
     };
 };
 
-function resetAll(name) {           //Resets all values in textboxes of class 'name'
+function accelChecker(u,v,a) {
+    if(u>v&&a>0){
+        return a*(-1);
+    } else if(u<v&&a<0){
+        return a*(-1);
+    } else if(u==v&&a!=0){
+        return 0;
+    };
+};
+
+function resetAll(name) {
     var elements = [];
     elements = document.getElementsByClassName(name);
     for(var i=0; i<elements.length; i++) {
         elements[i].value = '';
     };
 };
-
 
 function SUVAT() {
     var s = document.getElementById('s').value;
@@ -49,7 +58,7 @@ function SUVAT() {
     if(s!=''&&u!=''&&v!='') {                  //SUV give AT
         a = ((v*v)-(u*u))/(2*s);
         t = (2*s)/(u+v);
-        document.getElementById('a').value = a;
+        document.getElementById('a').value = accelChecker(u,v,a);
         document.getElementById('t').value = t;
     } else if(s!=''&&u!=''&&a!='') {           //SUA give VT
         v = Math.sqrt((u*u)+(2*a*s));
@@ -60,7 +69,7 @@ function SUVAT() {
         v = ((2*s)/t)-u;
         a = (2(s-(u*t)))/(t*t);
         document.getElementById('v').value = v;
-        document.getElementById('a').value = a;
+        document.getElementById('a').value = accelChecker(u,v,a);
     } else if(s!=''&&v!=''&&a!='') {           //SVA give UT
         u = (s-((a*(t*t))/2))/2;
         t = quadratic(a/2,(0-v),s);
@@ -70,22 +79,22 @@ function SUVAT() {
         u = ((2*s)/t)-v;
         a = (2*((v*t)-s))/(t*t);
         document.getElementById('u').value = u;
-        document.getElementById('a').value = a;
+        document.getElementById('a').value = accelChecker(u,v,a);
     } else if(s!=''&&a!=''&&t!='') {           //SAT give UV
         u = (s-((a*(t*t))/2))/t;
         v = (s+((a*(t*t))/2))/t;
         document.getElementById('u').value = u;
         document.getElementById('v').value = v;
     } else if(u!=''&&v!=''&&a!='') {           //UVA give ST
-        s = ((v*v)-(u*u))/(2*a);
-        t = (v-u)/a;
+        s = (((v*v)-(u*u))/(2*a));
+        t = ((v-u)/a);
         document.getElementById('s').value = s;
         document.getElementById('t').value = t;
     } else if(u!=''&&v!=''&&t!='') {           //UVT give SA
         s = ((u+v)*t)/2;
-        a = (v-u)/t;
+        a = ((v-u)/t);
         document.getElementById('s').value = s;
-        document.getElementById('a').value = a;
+        document.getElementById('a').value = accelChecker(u,v,a);
     } else if(u!=''&&a!=''&&t!='') {           //UAT give SV
         s = (u*t)+((a*(t*t))/2);
         v = u+(a*t);
@@ -107,7 +116,5 @@ V:<input type='text' class='textbox' id='v' placeholder='Final Velocity (ms^-1)'
 A:<input type='text' class='textbox' id='a' placeholder='Acceleration (ms^-2)'></input><br>
 T:<input type='text' class='textbox' id='t' placeholder='Time (s)'></input><br>
 <button onclick='SUVAT()'>Go</button><button onclick="resetAll('textbox')">Reset</button>
-<p>NB: If u>v, a is negative. It's a limitation of JavaScript that I dont' have
-the patience to work around.</p>
 </body>
 </html>
